--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" type="text/css" href="script.js">
 </head>
 <body>
-    
+    <div id="showpost"></div>
+    <button onclick="getallpost()">all post</button>
+    <button onclick="getallcomment()">all comment</button>
+    <table id="tableforpost">
+        <thead id="thead">
+          <tr>
+            <th>ID</th>
+            <th>Title</th>
+            <th>Body</th>
+          </tr>
+        </thead>
+        <tbody id="tbody"></tbody>
+      </table>
+
 </body>
 <script src="script.js"></script>
 </html>
