--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="showpost"></div>
     <button onclick="getallpost()">all post</button>
     <button onclick="getallcomment()">all comment</button>
+    <button onclick="getalluserposts()">postsforusers</button>
     <table id="tableforpost">
         <thead id="thead">
           <tr>
