--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <button onclick="getallpost()">all post</button>
     <button onclick="getallcomment()">all comment</button>
     <button onclick="getalluserposts()">postsforusers</button>
+    <button onclick="getallcommentposts()">postcommnetusers</button>
     <table id="tableforpost">
         <thead id="thead">
           <tr>
