--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <button onclick="getallcomment()">all comment</button>
     <button onclick="getalluserposts()">postsforusers</button>
     <button onclick="getallcommentposts()">postcommnetusers</button>
+    <input type="text" id="specificpost" name="specificpost">
+    <button onclick="specificpost()">post comment</button>
     <table id="tableforpost">
         <thead id="thead">
-          <tr>
+          <!-- <tr>
             <th>ID</th>
             <th>Title</th>
             <th>Body</th>
-          </tr>
+          </tr> -->
         </thead>
         <tbody id="tbody"></tbody>
       </table>
